{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 40,
  "lineage": "328a6dca-8be3-867c-f8a9-449db7445895",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "netology-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:835875420901:loadbalancer/netology-elb",
            "availability_zones": [
              "us-east-2c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "netology-elb-1946941335.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 15,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 10
              }
            ],
            "id": "netology-elb",
            "idle_timeout": 400,
            "instances": [
              "i-081efca330da05651",
              "i-0e00e36dd05fcb9fa",
              "i-0e0327114c4e411ec"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "netology-elb",
            "security_groups": [
              "sg-03712b1e33d52a28a"
            ],
            "source_security_group": "835875420901/netology-sg",
            "source_security_group_id": "sg-03712b1e33d52a28a",
            "subnets": [
              "subnet-0e4a33cead33ed261"
            ],
            "tags": {
              "Name": "netology-elb"
            },
            "tags_all": {
              "Name": "netology-elb"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.netology-sg",
            "aws_subnet.public",
            "aws_vpc.netology-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "netology-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835875420901:internet-gateway/igw-04bfa601aa68d3fbb",
            "id": "igw-04bfa601aa68d3fbb",
            "owner_id": "835875420901",
            "tags": {
              "Name": "netology-gw"
            },
            "tags_all": {
              "Name": "netology-gw"
            },
            "vpc_id": "vpc-091e9b40fc6994ebe"
          },
          "dependencies": [
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835875420901:route-table/rtb-04a4a9d2fe7c4623b",
            "id": "rtb-04a4a9d2fe7c4623b",
            "owner_id": "835875420901",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04bfa601aa68d3fbb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route"
            },
            "tags_all": {
              "Name": "public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-091e9b40fc6994ebe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.netology-gw",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "netology-rtassoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b9398b296a7191d",
            "route_table_id": "rtb-04a4a9d2fe7c4623b",
            "subnet_id": "subnet-0e4a33cead33ed261"
          },
          "dependencies": [
            "aws_vpc.netology-vpc",
            "aws_internet_gateway.netology-gw",
            "aws_route_table.public-route",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "netology-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835875420901:security-group/sg-03712b1e33d52a28a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03712b1e33d52a28a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "netology-sg",
            "name_prefix": "",
            "owner_id": "835875420901",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-091e9b40fc6994ebe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.netology-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2163557981",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03712b1e33d52a28a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.netology-sg",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": -1,
            "id": "sgrule-3709442793",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-03712b1e33d52a28a",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.netology-sg",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-914299880",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03712b1e33d52a28a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.netology-sg",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835875420901:subnet/subnet-0e4a33cead33ed261",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.31.32.0/19",
            "id": "subnet-0e4a33cead33ed261",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "835875420901",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-091e9b40fc6994ebe"
          },
          "dependencies": [
            "aws_vpc.netology-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "netology-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:835875420901:vpc/vpc-091e9b40fc6994ebe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0cd1a5a0c9c28e20e",
            "default_route_table_id": "rtb-0ba23cfc5ecc742f8",
            "default_security_group_id": "sg-083b466c1e0385b62",
            "dhcp_options_id": "dopt-0bfc40392c6a0a4e7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-091e9b40fc6994ebe",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ba23cfc5ecc742f8",
            "owner_id": "835875420901",
            "tags": {
              "Name": "netology-vpc"
            },
            "tags_all": {
              "Name": "netology-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}